fix console warning for navlink active class, updating component styling to align with one another

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -11,6 +11,9 @@ body {
   background-color: #e9f5f5;
 }
 
-.hero-section h1 {
+h1,
+h2,
+h3,
+h4 {
   font-family: "DM Serif Display", serif;
 }
